# waveshare-esp32-s3-lcd-7-bsp-rs

./: Cargo.toml  bindings.h
.cargo/: config.toml
src/: http.rs  lib.rs  slint_platform.rs  wifi.rs
