[package]
name = "waveshare-esp32-s3-lcd-7-bsp-rs"
version = "0.1.0"
authors = ["Shantanu Goel <shantanu.goel@gmail.com>"]
edition = "2021"
resolver = "2"

[lib]
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
thiserror = "2.0"
slint = { version = "1.11", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
gt911 = "0.3"

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "bindings.h"